# fastapi_jwt_oauth

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_11_11_2146-cef1e4ff4dda_init.py
app/: __init__.py  __main__.py
app/core/: config.py  db.py  ioc.py
app/daos/: base.py  user.py
app/models/: __init__.py  base.py  referrers.py  user.py
app/routers/: __init__.py  auth.py  oauth.py  referrers.py
app/schemas/: exceptions.py  user.py  utils.py
app/services/: __init__.py  auth.py  redis.py  security.py
